--- a/date/2025-06/page-2.htm
+++ b/date/2025-06/page-2.htm
@@ -114,6 +114,51 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-06-10">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-6-10-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 6月10日18.7M/S|免费VPN/Shadowrocket/SSR/V2ray/Clash免费节点订阅分享" src="/uploads/20241222-1/9e2b225d869222c8f450f1935366fea1.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-6-10-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 6月10日18.7M/S|免费VPN/Shadowrocket/SSR/V2ray/Clash免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了新加坡、日本、美国、欧洲、加拿大、香港、韩国等地区,最高速度可达18.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-06-09">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-6-9-node-share.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 6月9日20M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享" src="/uploads/20241222-1/5f167ecea9a0c5eda7bc8fa7798e5773.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-6-9-node-share.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 6月9日20M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了欧洲、韩国、日本、加拿大、美国、新加坡、香港等地区,最高速度可达20 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-06-08">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-6-8-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 6月8日21.8M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享" src="/uploads/20241222-1/aa3ddc9bff6fda25db17c202e775086f.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-6-8-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 6月8日21.8M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了日本、欧洲、美国、加拿大、香港、韩国、新加坡等地区,最高速度可达21.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-06-07">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-6-7-free-node-subscribe-links.htm" class="xcblog-blog-url">
@@ -229,16 +274,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/free-nodes/2025-6-13-clash-v2ray-ss-ssr.htm" title="VPN设备 | 6月13日22.2M/S|免费VPN/V2ray/Shadowrocket/Clash/SSR免费节点订阅分享">VPN设备 | 6月13日22.2M/S|免费VPN/V2ray/Shadowrocket/Clash/SSR免费节点订阅分享</a></li>
                         <li class="py-2"><a href="/news/article-110867.htm" title="import axios from ‘axios‘失效的问题">import axios from ‘axios‘失效的问题</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-20-free-high-speed-nodes.htm" title="VPN设备 | 5月20日19.3M/S|免费VPN/SSR/Shadowrocket/Clash/V2ray免费节点订阅分享">VPN设备 | 5月20日19.3M/S|免费VPN/SSR/Shadowrocket/Clash/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-13-free-v2ray.htm" title="VPN设备 | 5月13日18.9M/S|免费VPN/SSR/Shadowrocket/V2ray/Clash免费节点订阅分享">VPN设备 | 5月13日18.9M/S|免费VPN/SSR/Shadowrocket/V2ray/Clash免费节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-5-8-free-v2ray-subscribe.htm" title="VPN设备 | 5月8日18.5M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享">VPN设备 | 5月8日18.5M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-19-clash-v2ray-ss-ssr.htm" title="VPN设备 | 5月19日21.3M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享">VPN设备 | 5月19日21.3M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-14-free-v2ray.htm" title="VPN设备 | 5月14日21.9M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享">VPN设备 | 5月14日21.9M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-10-free-subscribe-node.htm" title="VPN设备 | 6月10日18.7M/S|免费VPN/Shadowrocket/SSR/V2ray/Clash免费节点订阅分享">VPN设备 | 6月10日18.7M/S|免费VPN/Shadowrocket/SSR/V2ray/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-12-node-share-links.htm" title="VPN设备 | 5月12日21.8M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享">VPN设备 | 5月12日21.8M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-25-free-node-subscribe-links.htm" title="VPN设备 | 5月25日18.6M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享">VPN设备 | 5月25日18.6M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-29-free-node-subscribe.htm" title="VPN设备 | 5月29日20.5M/S|免费VPN/Shadowrocket/SSR/V2ray/Clash免费节点订阅分享">VPN设备 | 5月29日20.5M/S|免费VPN/Shadowrocket/SSR/V2ray/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-16-free-high-speed-nodes.htm" title="VPN设备 | 5月16日19.7M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享">VPN设备 | 5月16日19.7M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-5-5-free-node-subscribe-links.htm" title="VPN设备 | 5月5日18.8M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享">VPN设备 | 5月5日18.8M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-15-free-v2ray-subscribe.htm" title="VPN设备 | 6月15日18M/S|免费VPN/SSR/Clash/Shadowrocket/V2ray免费节点订阅分享">VPN设备 | 6月15日18M/S|免费VPN/SSR/Clash/Shadowrocket/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-31-free-node-subscribe-links.htm" title="VPN设备 | 5月31日21.5M/S|免费VPN/V2ray/Shadowrocket/Clash/SSR免费节点订阅分享">VPN设备 | 5月31日21.5M/S|免费VPN/V2ray/Shadowrocket/Clash/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-7-free-node-subscribe-links.htm" title="VPN设备 | 6月7日21.6M/S|免费VPN/SSR/Clash/Shadowrocket/V2ray免费节点订阅分享">VPN设备 | 6月7日21.6M/S|免费VPN/SSR/Clash/Shadowrocket/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-12-node-share-links.htm" title="VPN设备 | 5月12日21.8M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享">VPN设备 | 5月12日21.8M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -250,7 +295,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">17</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
+                <h4><span class="badge" style="float: right;">20</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">33</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
